# rcgnn

./: .gitignore  README.md  batch.sh  clip_env.yaml  clipzyme_reqs.txt  config.yml  data.dvc  dvc.yaml  environment.yaml  environment.yml  hiec2.yaml  hiec_reqs.txt  just_two  just_two.clstr  parallel_cf.py  params.yaml  pyproject.toml  requirements.txt  target_output.parquet  test.fasta  test2  test2.clstr  test2.fasta  tracker.sh
.dvc/: config
.github/: copilot-instructions.md
artifacts/: 241212_negative_sampling_mlflow_pull.csv  250209_top_models.csv  250223_top_cgr_models.csv  251015_non_clip_v2_split_models.csv  dmax_error_fracs_clean.json  dmax_error_fracs_clean_shuffled.json  dmax_error_fracs_clean_shuffled_ds_10.json  dmax_error_fracs_esm_ds_10.json  dmax_error_fracs_esm_shuffled_ds_10.json  dmaxes_clean_ds_10.json  dmaxes_clean_shuffled.json  evaluation_metrics.csv  evaluation_metrics_by_similarity_split.csv  leave_one_out_ec_classification.csv  past_grid_search_names.txt  rc_plus_0_rules.csv  silhouette_clean_ds_10.csv  silhouette_clean_shuffled_ds_10.csv  silhouette_esm1b_ds_10.csv  sprhea_folded_pt_ns_idx2ec.json
configs/: bhpo.yaml  cluster.yaml  cross_val.yaml  cross_val_local.yaml  encode.yaml  filepaths.yaml  get_ac_negative_samples.yaml  get_arc_negative_samples.yaml  predict.yaml  prep_data.yaml  stage_data.yaml  train.yaml  train_base.yaml  train_clipzyme.yaml  train_test.yaml  tune_decision_threshold.yaml
data/: .gitignore  dummy.dvc  ec.txt  hello.txt.dvc  master_ec_idxs.csv
logs/: batch_fit  e_tmp  e_tmp_1  errlog_cf_kfold_esm  errlog_comp_clf  errlog_comp_clf_test  errlog_comp_ds_price  errlog_dmax_erx  errlog_fit_scl_exp  errlog_new  errlog_nth_erx_price  gs_custom_time_1_job  gs_time_3_job  mf_toy_gs_0  mf_toy_gs_1  nest_max_smpl_scl  outlog  outlog_cf_build_sim_mat_clean_swiss_new  outlog_cf_build_sim_mat_swiss_price  outlog_cf_kfold_clean  outlog_cf_kfold_esm  outlog_cf_kfold_esm_240220  outlog_cf_kfold_esm_fix_norm  outlog_cf_kfold_esm_knn_speedup  outlog_comp_blast_esm_cos  outlog_comp_clf  outlog_comp_clf_test  outlog_comp_ds_new  outlog_comp_ds_price  outlog_fit_scl_exp  outlog_knn_hpo_clean  outlog_masked_new  outlog_new  outlog_nth_level_new  outlog_nth_level_price  precomp_unnormed_sp_ec  rf_exploratory_100_est  rf_fit_10_est  rf_fit_test  rf_fit_test_mem_opt  (+22 more)
notebooks/: arc_neg_examples.ipynb  blosum.ipynb  brute_force_negative_sampling.ipynb  cf.ipynb  check_clip_split.ipynb  check_data_leak.ipynb  check_pretrained.ipynb  compare_datasets.ipynb  compare_time_split_sprhea.ipynb  count_cz_negs.ipynb  decarb.ipynb  dev_rxnfp_ft.ipynb  extra_af.ipynb  (+49 more)
(+720 files in other folders)
