[project]
name = "catalytic-function"
version = "0.1.0"
description = "Enzymatic Catalysis Prediction for CASP"
authors = [
  {name = "Pavel Katsev", email = "pasha@u.northwestern.edu"},
  {name = "Stefan Pate", email = "stefan.pate@northwestern.edu"},
]

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.system-requirements]
linux = "3.10"
macos = "13.0"
libc = { family="glibc", version="2.17" }

[tool.pixi.environments]
default = { features = ["base", "dev", "lint", "test"], solve-group = "default" }
lint = { features = ["lint"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

#
# base
#

[tool.pixi.feature.base.dependencies]
python = ">=3.10,<4.0"
chemprop = ">=2.0.4,<3"
rdkit = ">=2024.3.5,<2025"
lightning = ">=2.3.3,<3"
pytorch = ">=2.3.1,<3"
pandas = ">=2.2.2,<3"
numpy = ">=1.26.4,<2"
scipy = ">=1.14.0,<2"
yaml = ">=0.2.5,<0.3"

[tool.pixi.feature.base.pypi-dependencies]
skorch = ">=1.0.0,<2"

#
# developing
#

[tool.pixi.feature.dev.pypi-dependencies]
catalytic-function = { path = ".", editable = true }
jupyterlab = "*"
jupyterlab-vim = "*"

[tool.pixi.feature.dev.tasks]
lab = "jupyter lab"

[tool.pixi.feature.dev.dependencies]
pixi-pycharm = ">=0.0.6,<0.0.7"

#
# testing
#

[tool.pixi.feature.test.dependencies]
pytest = ">=8.1,<9"
pytest-cov = "*"

[tool.pixi.feature.test.tasks]
unit = "COVERAGE_FILE=.coverage.$(python -c 'import platform; print(platform.system())').$PIXI_ENVIRONMENT_NAME python -m pytest --cov catalytic-function"
test = { depends_on = ["unit"] }
coverage = "coverage combine && coverage html"

#
# linting & formatting
#

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.3.5,<0.4"

[tool.pixi.feature.lint.tasks]
format = "ruff format . && ruff check . --select I --fix"
lint = "ruff format --check . && ruff check ."

#
# building
#

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

#
# pythons
#

[pixi.feature.py310.dependencies]
python = "3.10.*"

[pixi.feature.py310.tasks]
test-py310 = { depends_on = ["install", "test"] }

[pixi.feature.py311.dependencies]
python = "3.11.*"

[pixi.feature.py311.tasks]
test-py311 = { depends_on = ["install", "test"] }

[pixi.feature.py312.dependencies]
python = "3.12.*"

[pixi.feature.py312.tasks]
test-py312 = { depends_on = ["install", "test"] }

# Python testing matrix
py38 = ["py38", "test"]
py39 = ["py39", "test"]
py310 = ["py310", "test"]
py311 = ["py311", "test"]
py312 = ["py312", "test"]
